2007-11-29  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* SoObjects/SOGo/SOGoObject.m ([SOGoObject -subscriptionRoles]):
	new method that returns the roles that qualifies for adding the
	special "authorized subscribed" sogo role.

2007-11-27  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* SoObjects/SOGo/SOGoContentObject.m ([SOGoContentObject
	-aclsForUser:uid]): copy all the roles from the container. If the
	object is new, make sure the roles contain "ObjectEditor" if and
	only if "ObjectCreator" is present.

	* SoObjects/SOGo/SOGoGCSFolder.m ([SOGoGCSFolder
	-aclsForUser:uid]): no longer take the "ObjectReader" role into
	account.

	* UI/Common/UIxFolderActions.m ([UIxFolderActions
	-canAccessContentAction]): always return HTTP status 204. We want
	this because we are relying on the SOPE access control manager to
	grant access to this method. This requires a fine-tuned access
	control in SOGo itself...

	* UI/Contacts/UIxContactsUserRightsEditor.m ([-userCanReadObjects])
	([-setUserCanReadObjects:userCanReadObjects]): removed methods.

	* UI/MailerUI/UIxMailUserRightsEditor.m ([UIxMailUserRightsEditor
	-updateRights]): no longer take the "ObjectReader" role into account.
	([-userCanReadMails], [-setUserCanReadMails:userCanReadMails]):
	removed methods.

	* SoObjects/Appointments/SOGoFreeBusyObject.m ([SOGoFreeBusyObject
	-fetchFreeBusyInfosFrom:_startDateto:_endDate]): specify context
	when looking up the Calendar folder.

2007-11-26  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* UI/Scheduler/UIxTaskEditor.m ([UIxTaskEditor -todo]): same as below.

	* UI/Scheduler/UIxAppointmentEditor.m ([UIxAppointmentEditor
	-event]): create the event if it doesn't exist.

	* UI/PreferencesUI/UIxPreferences.m ([UIxPreferences -userHasCalendarAccess])
	([UIxPreferences -userHasMailAccess]): same as below, for
	displaying preference tabs.

	* UI/Common/UIxPageFrame.m ([UIxPageFrame
	-userHasCalendarAccess]): new accessor for the link banner.