@@ -1,5 +1,9 @@
 2007-11-29  Wolfgang Sourdeau  <wsourdeau@inverse.ca>
 
+	* SoObjects/Appointments/SOGoCalendarComponent.m
+	([SOGoCalendarComponent -sendResponseToOrganizer]): send the
+	message only of sendEMailNotifications is set.
+
 	* SoObjects/SOGo/SOGoObject.m ([SOGoObject -subscriptionRoles]):
 	new method that returns the roles that qualifies for adding the
 	special "authorized subscribed" sogo role.
